assets/css/style.css
/* ... */
@media (max-width:895px){
    
}
@media (max-width:830px){
    .as_banner_slider .slick-arrow.slick-next {
        right: -360px;
    }
}
@media (max-width:767px){
    .as_info_box {
        margin: 10px 0;
    }
    .menu_open~span.as_body_overlay {
        position: fixed;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        background: rgba(0, 0, 0, 0.72);
        z-index: 998;
        backdrop-filter: blur(2px);
    }
    .as_verticle_center{
        display: block;
    }
    .as_search_wrapper {
        padding-top: 0;
    }
    .as_sign_box {
        margin: 40;
        margin: 40px auto 0 !important;
    }
    .as_blog_img img{
        width: 100%;
    }
    .as_banner_slider .slick-arrow.slick-next {
        right: -75px;
    }
    .as_toggle{
        display: flex;
        margin-right: 20px;
        cursor: pointer;
    }
    .as_menu_wrapper {
        flex-direction: row-reverse;
        justify-content: space-between;
    }
    .as_menu ul li,.as_menu ul li a{
        display: block;
    }
    .as_menu {
        position: fixed;
        right: -320px;
        left: auto;
        top: 0;
        bottom: 0;
        background: linear-gradient(160deg, #0d0820 0%, #1a0f3a 100%);
        z-index: 9999;
        width: 280px;
        max-width: 85vw;
        border-left: 2px solid var(--secondary-color);
        opacity: 1;
        visibility: hidden;
        overflow-y: auto;
        transition: right 0.35s cubic-bezier(0.4, 0, 0.2, 1), visibility 0.35s;
        box-shadow: -8px 0 40px rgba(0,0,0,0.7);
    }
    .menu_open .as_menu{
        right: 0;
        visibility: visible;
    }
    .as_menu li{
        display:flex;
        border-bottom: 1px solid var(--border-color);
        margin: 0;
    }
    .as_menu ul li a:before {
        display: none;
    }
    .as_menu_wrapper {
        padding:12px 10px;
    }
    .as_cart_wrapper{
        display: flex;
    } 
    .as_cart_wrapper>span {
        margin-right: 20px;
    }
    .slick-arrow.slick-prev, .as_banner_slider .slick-arrow.slick-prev {
        left: -102px;
    }
    .as_info_detail {
        display: none !important;
    }
    .as_right_info {
        padding-left: 5px;
    }
    .as_search_inner {
        padding: 0 20px;
    }
    .as_menu >ul >li .as_submenu {
        position: relative;
        opacity: 1;
        visibility: visible;
        top: auto !important;
        left: auto !important;
        transform: none !important;
        width: 100%;
        right: auto !important;
        padding: 0;
        background-color: transparent;
        display: none;
    }
    .as_menu >ul >li .as_submenu .as_submenu{
        display: none;
    }
    .as_menu >ul >li .as_submenu:before {
        display: none;
    }
    .as_menu ul li .as_submenu.active{
        display: block;
    }
    .as_menu ul li.as_submenu_li:after {
        position: absolute;
        content: '';
        border-left:5px solid transparent;
        border-right:5px solid transparent ;
        border-top: 5px solid #ffffff;
        top:25px;
        right:0;
    }
    .as_menu ul li.as_submenu_li ul li.as_submenu_li:after{
        top: 18px;
    }
    .as_banner_img {
        margin-top: 50px;
    }
}
@media (max-width:650px){
    .as_about_slider .slick-dots {
        position: absolute;
        left: 0;
        bottom: 15px;
        right: 0;
        display: flex;
        justify-content: center;
    }
}
@media (max-width:600px){
    .as_comment_section >ul>li .as_comnt_detail .as_btn {
        position: relative;
        right: auto;
        top: auto;
        padding: 0 20px;
        margin: 10px 0 0 0;
    }
    .slick-arrow.slick-prev, .as_banner_slider .slick-arrow.slick-prev, .as_banner_slider .slick-arrow.slick-next {
        display: none !important;
    }
    .as_banner_wrapper {
        padding: 30px 20px;
        overflow: hidden;
    }
    .as_header_detail {
        width: calc(100% - 0px);
    }
    .as_banner_wrapper .slick-dots {
        text-align: center;
        display: none;
        position: relative;
        right: 0;
        left: 0;
        transform: rotate(0deg);
        bottom: 0;
    }
    .as_banner_wrapper .slick-initialized .slick-slide {
        text-align: center;
    }
    .as_comment_section > ul > li > ul > li {
        margin-left: 40px;
    }

}
@media (max-width:567px){
    .as_btn {
    margin: 0;
}
.modal .modal-dialog {
    width: 100%;
}
.as_zodiac_heading {
    font-size: 24px;
}
.as_overview_inner {
    padding: 30px 30px 40px;
}
.as_cart_box {
    right: -30px;
}
}
@media (max-width:450px){
.as_newsletter_box {
    position: initial;
}
.as_about_admin {
    display: block;
}
.as_about_admin .as_aboutImage {
    width: 100%;
    margin-right: 0;
    text-align: center;
    display: flex;
    justify-content: center;
}
.as_about_admin .as_aboutDetail {
    width: calc(100% - 0px);
    text-align: center;
    padding-top: 10px;
}

.as_newsletter_box .as_btn {
    position: relative;
    right: 0;
    top: 20px;
    bottom: 0;
    width: 100%;
    margin: 0;
    display: flex;
    justify-content: center;
    text-align: center;
}
.as_btn:after, .as_btn:before{
    display: none;
}

.as_journal_box_wrapper {
    padding: 40px 18px !important;
}
.as_banner_wrapper {
        padding: 80px 0px;
    }
    .as_banner_wrapper .slick-dots {
        text-align: center;
        display: block;
    }
    .as_info_detail ul li .as_infobox>span.as_orange{
        display: none;
    }
    .as_contact_expert h1 {
        font-size: 20px;
    }
    .as_contact_expert h5 {
        font-size: 15px;
    }
    .as_contact_expert .as_icon {
        width: 50px;
        height: 50px;
    }
    .as_zodiac_heading .as_sign {
        margin-right: 20px;
    }
    .as_zodiac_heading {
    font-size: 20px;
    padding-left: 10px;
}
.as_newsletter_box:after, .as_newsletter_box:before{
    display: none;
}
}
/* ... */

